--- a/posts/01-Nhập_môn_Python.Rmd
+++ b/posts/01-Nhập_môn_Python.Rmd
@@ -66,7 +66,7 @@ Test case:
 |`findGT(5)`|120|
 |`findGT(7)`|5040|
 
-**Lưu ý**: không sử dụng hàm cho sẵn `math.factorial(a, b)` 
+**Lưu ý**: không sử dụng hàm cho sẵn `math.factorial(n)` 
 
 ---
 ---
