--- a/posts/01-Nhập_môn_Python.Rmd
+++ b/posts/01-Nhập_môn_Python.Rmd
@@ -1,4 +1,10 @@
 # (PART) Bài tập {-}
+---
+title: Hide all code blocks and show some initially
+output:
+  html_document:
+    code_folding: hide
+---
 # Nhập môn Python
 
 
