--- a/posts/01-Nhập_môn_Python.Rmd
+++ b/posts/01-Nhập_môn_Python.Rmd
@@ -5,7 +5,7 @@
 **Bài 1.1**
 
 Viết hàm tìm Ước chung lớn nhất của hai số `a`, `b`
-```python
+```{python eval=FALSE, collapse=TRUE}
 def findUCLN(a, b):
     ..
     ..
