--- a/posts/01-Nhập_môn_Python.Rmd
+++ b/posts/01-Nhập_môn_Python.Rmd
@@ -61,7 +61,7 @@ Test case:
 
 ---
 
-**Bài 1.3**
+## GIAI_THUA
 
 Viết hàm tìm Giai thừa của một số `n` theo công thức
 
@@ -82,6 +82,18 @@ Test case:
 
 **Lưu ý**: không sử dụng hàm cho sẵn `math.factorial(n)` 
 
+<details><summary><b>Lời giải</b></summary>
+<p>
+
+```python
+def findGT(n):
+    answer = 1
+    for i in range(1, n+1):
+        answer *= i
+    return answer
+```
+
+</p></details>
 ---
 
 **Bài 1.4**
