--- a/posts/02-Test.Rmd
+++ b/posts/02-Test.Rmd
@@ -1,4 +1,11 @@
-# ABC
+---
+title: "Habits"
+output:
+  html_document:
+    toc: true
+    number_sections: true
+---
+
 
 ## Quarterly Results {.tabset}
 
