--- a/posts/03-Nhập_môn_Python copy.Rmd
+++ b/posts/03-Nhập_môn_Python copy.Rmd
@@ -1,144 +1,1 @@
-# Nhập môn Python
-
-## UCLN
-
-Viết hàm tìm Ước chung lớn nhất của hai số `a`, `b`
-
-
-```python
-def findUCLN(a, b):
-    ..
-    ..
-    return __
-```
-
-
-Test case:
-
-|Ví dụ|Kết quả|
-|:--|:----------|
-|`findUCLN(50, 20)`|10|
-|`findUCLN(60, 520)`|20|
-
-**Lưu ý**: không sử dụng hàm cho sẵn `math.gcd(a, b)` 
-
-
-<details><summary><b>Lời giải</b></summary>
-<p>
-
-```python
-import math
-def findUCLN(a, b):
-    return math.gcd(a, b)
-```
-
-</p></details>
-
----
-
-
-## BCNN
-
-Viết hàm tìm Bội chung nhỏ nhất của hai số `a`, `b`
-
-```python
-def findBCNN(a, b):
-    ..
-    ..
-    return __
-```
-
-Test case:
-
-|Ví dụ|Kết quả|
-|:--|:----------|
-|`findBCNN(8, 6)`|24|
-|`findBCNN(30, 520)`|1560|
-
-**Lưu ý**: không sử dụng hàm cho sẵn `math.lcm(a, b)` 
-
-<details><summary><b>Lời giải</b></summary>
-<p>
-
-```python
-def findBCNN(a, b):
-    answer = a * b // findUCLN(a, b)
-    return answer
-```
-</p></detail>
-
----
-
-## GIAI_THUA
-
-Viết hàm tìm Giai thừa của một số `n` theo công thức
-
-$n! = 1 * 2 * 3 * .. * (n-1) * n$
-
-```python
-def findGT(n):
-    ...
-    return _
-```
-
-Test case:
-
-|Ví dụ|Kết quả|
-|:--|:----------|
-|`findGT(5)`|120|
-|`findGT(7)`|5040|
-
-**Lưu ý**: không sử dụng hàm cho sẵn `math.factorial(n)` 
-
-<details><summary><b>Lời giải</b></summary>
-<p>
-
-```python
-def findGT(n):
-    answer = 1
-    for i in range(1, n+1):
-        answer *= i
-    return answer
-```
-
-</p></details>
----
-
-## CHIA_CHO_5 {.tabset}
-
-**Mô tả**
-
-Viết hàm tìm tất cả các số chia hết cho 5 nhưng không chia hết cho 15 nằm trong đoạn từ `[a, b]`. Kết quả trả về là một danh sách
-
-```python
-def find(a, b):
-    for i in range(__, __):
-        if __:
-            ..
-            ..
-        ..
-    return _
-```
-
-**Test case**
-
-|Ví dụ|Kết quả|
-|:--|:----------|
-|`find(1, 40)`|[5, 10, 20, 25, 35, 40]|
-|`find(10, 100)`|[10, 20, 25, 35, 40, 50, 55, 65, 70, 80, 85, 95, 100]|
-
-<details><summary><b>Lời giải</b></summary>
-<p>
-
-```python
-def find(a, b):
-    answer = []
-    for i in range(a, b+1):
-        if (i % 5 == 0) & (i % 3 != 0):
-            answer.append(i)
-    return answer
-```
-
-</p>
-
----
+# ABC
